--- a/codereview.html
+++ b/codereview.html
@@ -82,7 +82,7 @@
     <footer>
         <div id="Footer">
             <a href="https://codefactory.wien/en/contact-en/ ">Contact us</a>
-            <a href="#">About</a>
+            <a href="http://127.0.0.1:3000/bonus/blogbonus.html">About</a>
             <p>©Arnaldo Bismarques 2023</p>
         </div>
     </footer>
