--- a/recipeofthemonth.html
+++ b/recipeofthemonth.html
@@ -17,7 +17,7 @@
             <div>
                 <div class="nav a">
                     <a href="#Recipe">recipe of the month</a>
-                    <a href="#blogger">About the blogger</a>
+                    <a href="http://127.0.0.1:3000/bonus/blogbonus.html">About the blogger</a>
                     <a href="http://127.0.0.1:3000/codereview.html">Back to Food Blog</a>
                 </div>
         </nav>
